--- a/codesquare/src/main/resources/static/styles/study/study.css
+++ b/codesquare/src/main/resources/static/styles/study/study.css
@@ -405,6 +405,8 @@
 	
 	.info-list.groupContent {
 		border-bottom: 1px solid rgba(0,0,0,.125);
+	    position: absolute;
+		top: 5px;
 	}
 	
 	#info_main, #info_none {
