--- a/codesquare/src/main/resources/templates/fragments/header.html
+++ b/codesquare/src/main/resources/templates/fragments/header.html
@@ -23,7 +23,7 @@
             <li class="nav-item">
                <a class="nav-link" href="#">스터디</a>
                <ul class="csnav-dropdown">
-                  <li><a class="nav-link" href="#">스터디모집</a>
+                  <li><a class="nav-link" href="/studyWanted">스터디모집</a>
                   <li><a class="nav-link" href="#">스터디후기</a>
                   <li><a class="nav-link" href="/companyList">스터디룸</a>
                </ul>
