--- a/codesquare/src/main/resources/templates/study/studyWantedWriteView.html
+++ b/codesquare/src/main/resources/templates/study/studyWantedWriteView.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout/mainLayout}"
+<html xmlns:th="http://www.thymeleaf.org" layout:decorate="~{layout/mainLayout2}"
     xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <title>스터디 모집 글쓰기</title>
