--- a/codesquare/src/main/resources/templates/fragments/header2.html
+++ b/codesquare/src/main/resources/templates/fragments/header2.html
@@ -37,7 +37,7 @@
 	<!-- 로고 -->
 	<br /> <br />
 
-	<div class="row logo">
+	<div class="logo">
 		<div class="col codesquare py-0">
 			<a th:href="@{/}"><img th:src="@{/static/images/logo.png}"
 				alt="noimg" /> 코드스퀘어</a>
@@ -60,7 +60,7 @@
 			<span class="dropmenu"> <a href="#">스터디 / 세미나</a>
 			</span>
 			<ul class="dropdown">
-				<li><a href="#">스터디 모집</a></li>
+				<li><a href="/studyWanted">스터디 모집</a></li>
 				<li><a href="/seminarList">세미나 모집</a></li>
 				<li><a href="#">스터디 / 세미나 후기</a></li>
 				<li><a href="/companyList">공간예약</a></li>
@@ -84,7 +84,7 @@
 		</div>
 
 		<div class="col">
-			<span class="dropmenu"> <a href="#">플래너</a>
+			<span class="dropmenu"> <a href="/dashboard">플래너</a>
 			</span>
 
 		</div>
