--- a/codesquare/src/main/resources/templates/member/login/signUpDone.html
+++ b/codesquare/src/main/resources/templates/member/login/signUpDone.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" layout:decorator="layout/mainLayout"
+<html xmlns:th="http://www.thymeleaf.org" layout:decorator="layout/mainLayout2"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="UTF-8">
