--- a/codesquare/src/main/resources/templates/admin/boardControl.html
+++ b/codesquare/src/main/resources/templates/admin/boardControl.html
@@ -82,9 +82,8 @@
 						      	</div>
 					      </div>
 					      <div class="modal-footer">
-					        <button id="btn-pending-cancel" type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
+					        <button id="btn-pending-cancel" type="button" class="btn btn-secondary" data-dismiss="modal">취소하기</button>
 					        <button id="btn-pending-clear" type="button" class="btn btn-primary">저장하기</button>
-					        <button id="btn-pending-yes" type="button" class="btn btn-primary">취소하기</button>
 					      </div>
 					    </div>
 					  </div>
