--- a/codesquare/src/main/resources/templates/lecture/lectureList.html
+++ b/codesquare/src/main/resources/templates/lecture/lectureList.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
 	xmlns:sd="http://www.thymeleaf.org/spring-data"
-	layout:decorator="layout/mainLayout"
+	layout:decorator="layout/mainLayout2"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="utf-8"/>
 <link rel="stylesheet" type="text/css" th:href="@{/static/styles/lecture/lectureCustom.css}">
 </head>
 <body>
-	<div class="container" layout:fragment="content">
+	<div class="container container-fluid" layout:fragment="content">
 		<div class="lecture_header_item d-flex justify-content-between"	style="border-bottom: 2px solid #D8D8D8">
 			<div class="search_box p-2">
-				<form name="lectureIntro-serarchFrom" class="form-inline my-2 my-lg-0">
+				<form name="lectureIntro-serarchFrom" class="form-inline my-2 my-lg-0" style="border:none;">
 					<input type="text" style="display:none;"/>
 					<input class="form-control mr-sm-2" type="text" name="keyword"	placeholder="원하는 강의를 검색해 보세요!" 
 					style="font-size: 10px; width: 180px; height: 40px; margin-right: 0px; border-right: 1px dashed #D8D8D8">
@@ -19,13 +19,13 @@
 						<option selected value="0">제목</option>
 						<option value="1">강사명</option>
 					</select>
-					<button id="btn-search" class="btn btn-secondary my-2 my-sm-0" type="button" style="height: 40px; border-radius: 0px;">검색</button>
+					<button id="btn-search" class="btn btn-secondary my-2 my-sm-0" type="button" style="height: 40px; border-radius: 0px;color:white;	background-color:#5b2e7d;">검색</button>
 				</form>
 			</div>
 			<div class="tag_list p-2">
 				<div class="btn-group btn-group-toggle" data-toggle="buttons">
-					<label class="btn btn-lang-kind btn-secondary active"><input type="radio" name="options" id="all" autocomplete="off" checked="">All</label> 
-					<label th:each="tag:${tagList}" class="btn btn-lang-kind btn-secondary"><input type="radio" name="options" th:id="@{${tag}}" th:value="@{${tag}}" th:text="@{${tag}}" autocomplete="off"/></label> 
+					<label class="btn btn-lang-kind btn-secondary active" ><input type="radio" name="options" id="all" autocomplete="off" checked="" >All</label> 
+					<label th:each="tag:${tagList}" class="btn btn-lang-kind btn-secondary"  ><input type="radio" name="options" th:id="@{${tag}}" th:value="@{${tag}}" th:text="@{${tag}}" autocomplete="off"/></label> 
 				</div>
 			</div>
 		</div>
@@ -61,7 +61,7 @@
 			</li>
 		</ul>
 		<div sec:authorize="hasAnyRole('ROLE_2', 'ROLE_3')" class="d-flex flex-row-reverse bg-light" >
-		  <a class="p-2 btn btn-secondary btn-lg" th:href="@{learn/intro}">강의등록</a>
+		  <a class="p-2 btn btn-secondary btn-lg" th:href="@{learn/intro}" style="color:white;	background-color:#5b2e7d;">강의등록</a>
 		</div>
 		<th:block layout:fragment="script">
 			<script th:src="@{/webjars/jquery/3.3.1/dist/jquery.js}"></script>
