--- a/codesquare/src/main/resources/templates/lecture/lectureWritePage.html
+++ b/codesquare/src/main/resources/templates/lecture/lectureWritePage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sd="http://www.thymeleaf.org/spring-data"
-	layout:decorator="layout/mainLayout"
+	layout:decorator="layout/mainLayout2"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="utf-8" />
