--- a/codesquare/src/main/resources/templates/planner/myPlanner.html
+++ b/codesquare/src/main/resources/templates/planner/myPlanner.html
@@ -87,7 +87,6 @@ $(function(){
 	
 	
 	/* ### 2. 마우스 hover 될 때 이벤트 ### */
-	
 	/*  체크&삭제 아이콘 표시 event  */
   	$(document).on({
  		mouseenter: function () {
@@ -157,11 +156,8 @@ $(function(){
 	            }
 	  	})
 	});
-	
- 	
- 	
+
  	/* ###  4. 마우스  클릭 할 때 : 해당 TODO 수정되고 ajax로 반영  ### */
- 	
  	var currentValue;
 	$(document).on({
 		click : function(){
@@ -193,16 +189,6 @@ $(function(){
 			}//END if
 			$(this).attr("contentEditable",false);
 		}}, '.todo-content');
-	
-
- 	
-	
-	 
-	 
-	 
-	 
-	 
-		   
 });//익명function END
 
 var loadBookmark = function() {
@@ -220,19 +206,18 @@ var loadBookmark = function() {
 		}
 	});
 };//북마크 리스트를 새로 로드해오는 함수
-
-
-
-
  </script>
 </head>
 
+
+
+
 <body>
-    <article class="content" layout:fragment="content">
+    <article class="content" layout:fragment="myPageContent2">
 
 
         <!-- START GROUP-WORK -->
-        <div class="accordion acc-custom" id="accorionGroupWork">
+        <div class="accordion acc-custom rowCustom" id="accorionGroupWork">
             <p class="card-category">그룹 과제 목록</p>
             <div class="card" th:each=" list, status : ${groupWorkList}">
                 <div class="card-header" th:id="|heading${status.index}|">
@@ -253,10 +238,8 @@ var loadBookmark = function() {
 
 
 
-
-
         <!-- START BOOK-MARK List -->
-        <div id="bookmarkList" class="row custom-tab">
+        <div id="bookmarkList" class="row rowCustom custom-tab">
 								<!-- *****************
 										이 부분은 Ajax로 로드 됨 
 									    *****************  -->
@@ -264,11 +247,8 @@ var loadBookmark = function() {
         <!-- END BOOK-MARK List  -->
 
 
-
-
-
 		<!-- START TODO List -->
-		<div id="custom-todoList">
+		<div id="custom-todoList" class="rowCustom">
 			<p class="card-category">TO-DO List</p>
 			<form id="todoForm" action="writeTodo">
 				<div class="form-group todoInputGrid">
