--- a/codesquare/src/main/resources/templates/member/myPage/myReservedList.html
+++ b/codesquare/src/main/resources/templates/member/myPage/myReservedList.html
@@ -17,17 +17,17 @@
 			<div class="row text-center p-2 shadow-sm">
 				<div class="col-2">예약날짜</div>
 				<div class="col-4">예약내역</div>
-				<div class="col-2">결제금액</div>
-				<div class="col-2">결제일</div>
-				<div class="col-2">예약시간</div>
+				<div class="col-4">이용날짜</div>
+				<div class="col-2">이용시간</div>
 			</div>
 			<div class="row text-center border-bottom  py-2"
 				th:each="rlist : ${rlist}">
-				<div class="col-2" th:text="${rlist.reservationdate}"></div>
+				<div class="col-2" th:text="${rlist.agreeTime}"></div>
 				<div class="col-4" th:text="${rlist.roomname}"></div>
-				<div class="col-2" th:text="${rlist.payamount}"></div>
-				<div class="col-2" th:text="${rlist.paymentdate}"></div>
-				<div class="col-2" th:text="${rlist.reservationtime}"></div>
+				<div class="col-4" th:text="${#dates.format(rlist.reservationdate, 'yyyy.MM.dd HH:mm')}"></div>
+				
+
+				<div class="col-2" th:text="${rlist.usetime}"></div>
 			</div>
 			<!-- 페이징  -->
 			<div class="row pt-2 ">
