--- a/codesquare/src/main/resources/templates/board/freeWrite.html
+++ b/codesquare/src/main/resources/templates/board/freeWrite.html
@@ -38,17 +38,18 @@ layout:decorator="layout/mainLayout2">
 </style>
 </head>
 <body>
-<div class="container" layout:fragment="content"><br>
-<form action="freewritego" name="freeform" id="freeform">
+<div class="container" layout:fragment="content" style="padding-left: 40px; padding-right: 40px;"><br>
+<form th:action="@{/freewritego}" name="freeform" id="freeform">
+<input type="hidden" name="boardKindId" th:value="${boardKindId}">
 	<div class="lecture_header_item d-flex justify-content-between" style="border-bottom: 5px solid black;">
-		<h1 align="center"><a href=getfree style="color: black;">자유게시판</a></h1>
+		<h1 align="center"><a th:href="@{'/getfree/'+${boardKindId}}" style="color: black;"><span th:text="${bn.boardName}"></span></a></h1>
 	</div>
 		<div style="margin-top: 10px; border-bottom: 5px solid black;">
 		<input type="hidden" name="userId" id="userId" th:value="${session.userId}">
 		<input type="hidden" name="nickName" id="nickName" th:value="${session.nickName}">
-			<input type="text" name="title" placeholder="제목을입력해주세요." style="margin-bottom: 10px; width: 1110px; height: 50px" autocomplete="off">
+		<input type="text" name="title" placeholder="제목을입력해주세요." style="margin-bottom: 10px; width: 1308px; height: 50px" autocomplete="off">
 	</div>
-<textarea name="content" id="content" style="width: 1110px; height:400px;"  autocomplete="off"></textarea>
+<input name="content" id="content" style="width: 1317px; height:400px;" autocomplete="off">
 <!-- <textarea name="content" id="content" style="width: 100%; height: 412px; min-width: 610px; overflow: visible;" rows="25"></textarea> -->
 			<div align="center">
 				<button type="submit" style="margin-top: 10px;" id="savebutton" name="savebutton">확인</button><button type="button" style="margin-top: 10px" id="button2" onclick="history.back(-1);">취소</button>
