--- a/codesquare/src/main/resources/templates/board/freeModify.html
+++ b/codesquare/src/main/resources/templates/board/freeModify.html
@@ -1,4 +1,3 @@
-<html>
 <html xmlns:th="http://www.typeleaf.org" 
 xmlns:sd="http://www.thymeleaf.org/spring-data"
 xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
@@ -35,16 +34,16 @@ layout:decorator="layout/mainLayout2">
 </style>
 </head>
 <body>
-<div class="container" layout:fragment="content">
-<form action="freeupdate">
+<div class="container" layout:fragment="content" style="padding-left: 40px; padding-right: 40px;">
+<form th:action="@{/freeupdate}" name="freeupdate" id="freeuadate">
 <input type="hidden" name="id" th:value="${list.id}">
-	<div style="border-bottom: 2px solid;"><h1 align="left"><a href="/getfree" style="color: black;">자유게시판</a></h1></div>
-	<div style="border-bottom: 2px solid; border-bottom-color: gray;">
-	<a style="float: right;"><span th:text="${list.hit}" style="float: right;"></span>조회수 &nbsp;</a>
-	<h2><input type="text" th:value="${list.title}" name="title" class="article__title"></h2></div>
+<input type="hidden" name="boardKindId" th:value="${boardKindId}">
+	<div style="border-bottom: 5px solid;"><h1 align="left"><a th:href="@{'/getfree/'+${boardKindId}}" style="color: black;"><span th:text="${bn.boardName}"></span></a></h1></div>
+	<div style="border-bottom: 3px solid; border-bottom-color: gray;">
+	<h2><input type="text" th:value="${list.title}" name="title" class="article__title" style="width: 1307px; margin-top: 10px;"></h2></div>
 				<section class="article__data">
 				<div class="fr-view">
-				<textarea name="content" id="content" th:utext="${list.content}" style="width: 1110px; height:400px;"  autocomplete="off"></textarea>
+				<textarea name="content" id="content" th:utext="${list.content}" style="width: 1307px; height:400px;"  autocomplete="off"></textarea>
 				</div>
 				</section>
 				<div align="center">
