planner, mainLayout등 자잘한 css 간격들 수정

--- a/codesquare/src/main/resources/templates/layout/plannerLayout.html
+++ b/codesquare/src/main/resources/templates/layout/plannerLayout.html
@@ -34,6 +34,8 @@
 </head>
 
 <body>
+
+ <div id="wapper">
   <!-- 페이지의 헤더부분 -->
   <header th:replace="fragments/header2 :: headerFragment2"></header>
 
@@ -126,7 +128,7 @@
 
   <th:block layout:fragment="script"></th:block>
   <th:block layout:fragment="css"></th:block>
-
+</div>
 </body>
 
 </html>
