--- a/codesquare/src/main/resources/templates/study/studyWantedView.html
+++ b/codesquare/src/main/resources/templates/study/studyWantedView.html
@@ -27,13 +27,13 @@
 							<small class="nickname col-md-4" th:text="*{nickName}"></small>
 						</h2>
 						<div class="row">
-							<span class="col-md-8" th:text="*{writeDate}"></span>
-							<div class="like col-md-2">
+							<span class="col-md-9" th:text="*{writeDate}"></span>
+							<div class="like">
 								좋아요
 								<i class="fa fa-heart" aria-hidden="true"></i>
 								<span th:text="*{likeCount}"></span>
 							</div>
-							<div class="col-md-2">
+							<div class="hit">
 								조회수
 								<i class="fa fa-eye" aria-hidden="true"></i>
 								<span th:text="*{hit}"></span>
