--- a/codesquare/src/main/resources/static/styles/study/study.css
+++ b/codesquare/src/main/resources/static/styles/study/study.css
@@ -49,6 +49,12 @@
 	}
 	
 	.boardHeader .like {
+		width: 13%;
+		text-align: right;
+	}
+	
+	.boardHeader .hit {
+		width: 10%;
 		text-align: right;
 	}
 	
@@ -96,6 +102,7 @@
 		text-align:left;
 	    display: inline-block;
 	    margin: 0 auto;
+        margin-top: 5%;
 	}
 	
 	.comment-div {
@@ -252,6 +259,7 @@
 		border-width: 1px;
 		border-style: solid;
 		border-image: initial;
+		background-color: #222;
 	}
   	
   	#info-message {
@@ -553,22 +561,10 @@
 	#boardEdit-content {
 		display: inline-block;
 	}
-/* 
-	.swal2-confirm {
-	    font-family: "Times New Roman", Times, serif !important;
-	    font-size: 15px;
-	    background-color: #BDA1BB !important;
-	    border-left-color: #BDA1BB !important;
-	    border-right-color: #BDA1BB !important;
+
+	
+	.boardDetail .board-content {
+	    height: -webkit-fill-available;
 	}
 	
-	.swal-button:target {
-		box-shadow: none;
-			    border-left-color: #BDA1BB ;
-	    border-right-color: #BDA1BB ;
-	    border: 0;
-	}
 	
-	[class^=swal2] {
-    -webkit-tap-highlight-color: red;
-	} */
