--- a/codesquare/src/main/resources/templates/layout/mainLayout2.html
+++ b/codesquare/src/main/resources/templates/layout/mainLayout2.html
@@ -28,7 +28,7 @@
 
 
 <!-- 페이지의 content -->
-<div layout:fragment="content" style="margin: 0 200px 100px;"></div>
+<div layout:fragment="content" style="padding: 0 150px 50px;"></div>
 
 <!-- 페이지의 푸터부분 -->
 
