--- a/codesquare/src/main/resources/templates/layout/myPageLayout.html
+++ b/codesquare/src/main/resources/templates/layout/myPageLayout.html
@@ -39,6 +39,7 @@
 
 </head>
 <body>
+ <div id="wapper">
 	<!-- 페이지의 헤더부분 -->
 	<header th:replace="fragments/header2 :: headerFragment2"></header>
 
@@ -114,7 +115,7 @@
 				</div>
 			</div>
 
-			<div layout:fragment="myPageContent" id="myPageContent"style="margin-bottom: 100px;">
+			<div layout:fragment="myPageContent" id="myPageContent" style="margin-bottom: 100px;">
 			</div>
 			</main>
 	</div>
@@ -154,6 +155,6 @@
 
 	<th:block layout:fragment="script"></th:block>
 	<th:block layout:fragment="css"></th:block>
-
+</div>
 </body>
 </html>
