--- a/codesquare/src/main/resources/templates/group/groupInfo.html
+++ b/codesquare/src/main/resources/templates/group/groupInfo.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-	layout:decorator="layout/mainLayout2"
+	layout:decorator="layout/plannerLayout"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
 </head>
 <body>
-	<div class="container" layout:fragment="content">
+	<div class="container" layout:fragment="myPageContent2">
 		그룹정보
 		
 		<div th:text="${ginfo}"></div>
