--- a/codesquare/src/main/resources/templates/layout/plannerLayout.html
+++ b/codesquare/src/main/resources/templates/layout/plannerLayout.html
@@ -69,16 +69,10 @@
             </li>
             <li class="nav-item2">
 			  <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle "><i class="fas fa-user-tie"></i> Groups</a>
-			  <ul class="collapse list-unstyled" id="pageSubmenu">
-			    <li>
-			      <a href="#">group 1</a>
-			    </li>
-			    <li>
-			      <a href="#">group 2</a>
-			    </li>
-			    <li>
-			      <a href="#">group 3</a>
-			    </li>
+			  <ul class="collapse list-unstyled" id="pageSubmenu" th:each="glist : ${glist}">
+			 
+			   <li> <a th:href="@{'/group/'+${glist.groupId}}" th:text="${glist.groupId}"></a> </li>
+
 			  </ul>
 			</li>
             
